test: Fix flakey flow service test